[package]
name = "baduino"
version = "0.1.0"
authors = ["dvloplerz <ittipat135@gmail.com>"]
edition = "2021"

[[bin]]
name = "baduino"
test = false
bench = false

[dependencies]
panic-halt = "*"
ufmt = "*"
nb = "*"
embedded-hal = "*"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d5beacb"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
